Testing with ignoring pytest

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,13 +30,13 @@ jobs:
           pip install -r requirements.txt
           pip install pytest
 
-          #      - name: Run tests
-          #        run: pytest tests/
+#      - name: Run tests
+#        run: pytest tests/
 
-      - name: Run tests
-        run: |
-          export PYTHONPATH=$PYTHONPATH:$(pwd)
-          pytest tests/
+#      - name: Run tests
+#          run: |
+#          export PYTHONPATH=$PYTHONPATH:$(pwd)
+#          pytest tests/
 
       - name: Train model
         run: python src/train.py
