--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,6 +30,19 @@ jobs:
           pip install -r requirements.txt
           pip install pytest
 
+      - name: Install DVC
+        run: |
+          pip install "dvc[s3]"
+
+      - name: Pull data from DVC remote
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        run: |
+          dvc pull
+
+
 #      - name: Run tests
 #        run: pytest tests/
 
