--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -72,6 +72,11 @@ jobs:
         with:
           version: 'v1.28.0'
 
+      - name: Configure kubeconfig
+        run: |
+          echo "${{ secrets.KUBECONFIG_DATA }}" | base64 -d > kubeconfig
+          export KUBECONFIG=$PWD/kubeconfig
+
       - name: Deploy to Kubernetes
         run: |
           kubectl apply -f k8s/
